# dbgen-model-template

./: README.md  cookiecutter.json  pyproject.toml
hooks/: post_gen_project.py
simple/hooks/: post_gen_project.py
simple/{{cookiecutter.repo_name}}/: requirements.txt
simple/{{cookiecutter.repo_name}}/data/: file_2.txt
simple/{{cookiecutter.repo_name}}/{{cookiecutter.model_name}}/transforms/: io.py
tutorials/alice_bob_lab/: cookiecutter.json
tutorials/alice_bob_lab/hooks/: post_gen_project.py
tutorials/alice_bob_lab/{{cookiecutter.repo_name}}/: README.md  install.sh  requirements.txt  temp.env
tutorials/alice_bob_lab/{{cookiecutter.repo_name}}/{{cookiecutter.model_name}}/: main.py
tutorials/alice_bob_lab/{{cookiecutter.repo_name}}/{{cookiecutter.model_name}}/extracts/: csv_extract.py  measurement_extract.py
tutorials/alice_bob_lab/{{cookiecutter.repo_name}}/{{cookiecutter.model_name}}/generators/: f_to_c.py  parse_measurements.py  read_csv.py
{{cookiecutter.repo_name}}/: requirements.txt  temp.env
{{cookiecutter.repo_name}}/data/: test.csv
{{cookiecutter.repo_name}}/{{cookiecutter.model_name}}/: __init__.py  constants.py  main.py
{{cookiecutter.repo_name}}/{{cookiecutter.model_name}}/generators/: __init__.py  io.py
