[tool.poetry]
name = "dbgen-model-template"
version = "0.1.0"
description = "A cookiecutter template for a dbgen model repo"
authors = ["Michael Statt <michael.statt@modelyst.io>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">3.7.1,<4.0"

[tool.poetry.dev-dependencies]
cookiecutter = "^1.7.3"
black = "^21.10b0"
flake8 = "^4.0.1"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
